--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -127,7 +127,7 @@ deployment.apps/redis-enterprise-services-rigger   1/1     1            1       
 ```
 
 
-You can verify the Pods and list of services over Google Cloud Dashboard UI:
+You can verify the Pods and list of services using the Google Cloud Dashboard UI:
 
 ![Redis Enterprise UI](re_kubernetes.png)
 
