--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -132,7 +132,7 @@ You can verify the Pods and list of services using the Google Cloud Dashboard UI
 ![Redis Enterprise UI](re_kubernetes.png)
 
 
-### Step 11.  Listing the secrets
+### Step 11.  Listing the Secrets
 
 ```
 kubectl get secrets redis-enterprise -o yaml | grep password | awk '{print $2}'
