--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -139,7 +139,7 @@ kubectl get secrets redis-enterprise -o yaml | grep password | awk '{print $2}'
 bXVLeHRpblY=
 ```
 
-### Step 12. Listing the password
+### Step 12. Listing the Password
 
 ```
 echo bXVLeHRpblY= | base64 -d
