--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -148,7 +148,7 @@ echo bXVLeHRpblY= | base64 -d
 
 ### Step 13. Creating a Database
 
-Open  https://localhost:8443 on the browser to see the Redis Enterprise Software web console. Click on "Setup", add your preferred DNS and admin credentials and proceed further to create your first Redis database using Redis Enterprise.
+Open  `https://localhost:8443` in the browser to see the Redis Enterprise Software web console. Click on "Setup", add your preferred DNS and admin credentials and proceed further to create your first Redis database using Redis Enterprise.
 
 
 ## Next Step
