--- a/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
+++ b/docs/create/kubernetes/kubernetes-gke/index-kubernetes-gke.mdx
@@ -151,7 +151,7 @@ echo bXVLeHRpblY= | base64 -d
 Open  `https://localhost:8443` in the browser to see the Redis Enterprise Software web console. Click on "Setup", add your preferred DNS and admin credentials and proceed further to create your first Redis database using Redis Enterprise.
 
 
-## Next Step
+## Next Steps
 
 - [Redis Kubernetes Architecture](https://docs.redis.com/latest/kubernetes/architecture/)
 - [Redis Enterprise Kubernetes Operator-based Architecture](https://docs.redis.com/latest/kubernetes/architecture/operator/)
