--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -20,7 +20,7 @@ Think of scaling nodes up, or upgrading to a new version, or disaster recovery f
 
 ### Stateful Vs Stateless Applications
 
-Let’s try to understand the difference between [stateful](https://kubernetes.io/docs/tutorials/stateful-application/)  versus [stateless](https://kubernetes.io/docs/tutorials/stateless-application/) application with a simple example. Consider a Kubernetes cluster running a simple web application (without any operator). The YAML file below allows you to create two replicas of NGINX (a stateless application).
+Let’s try to understand the difference between [stateful](https://kubernetes.io/docs/tutorials/stateful-application/)  versus [stateless](https://kubernetes.io/docs/tutorials/stateless-application/) applications with a simple example. Consider a Kubernetes cluster running a simple web application (without any operator). The YAML file below allows you to create two replicas of NGINX (a stateless application).
 
 
 ```
