--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -275,7 +275,7 @@ Below are a few examples of popular Kubernetes Operators and their functions and
 * Initiate upgrades, automated backups, and failure recovery, simulating failure in all or part of your cluster to test its resilience
 * Allows you to publish a service to the applications that don’t support Kubernetes APIs to discover them
 
-### How does Operator work?
+### How does an Operator work?
 
 
 Operators work by extending the Kubernetes control plane and API. Operators allows you to define a Custom Controller that watches your application and performs custom tasks based on its state. The application you want to watch is usually defined in Kubernetes as a new object: a [Custom Resource](https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/) (CR) that has its own YAML spec and object type that is well understood by the API server. That way, you can define any specific criteria in the custom spec to watch out for, and reconcile the instance when it doesn’t match the spec. The way an Operator’s controller reconciles against a spec is very similar to native Kubernetes controllers, though it is using mostly custom components.
