--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -78,7 +78,7 @@ The example above shows the name of the Deployment in the namespace. It also dis
 
 ![alt_text](images/image2.png "image_tooltip")
 
-You can run the “kubectl describe” command to get detailed information of deployment resources. Show details of a specific resource or group of resources
+You can run the `kubectl describe` command to get detailed information of deployment resources. To show details of a specific resource or group of resources:
 
 
 ```
