--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -149,7 +149,7 @@ The above YAML specification creates a new Service object named "nginx-service,"
 ![alt_text](images/image3.png "image_tooltip")
 
 
-Let’s scale the Deployment to 4 replicas. We are going to use the kubectl scale command, followed by the deployment type, name, and desired number of instances. The output is similar to this:
+Let’s scale the Deployment to 4 replicas. We are going to use the `kubectl scale` command, followed by the deployment type, name, and desired number of instances. The output is similar to this:
 
 
 ```
