--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -267,7 +267,7 @@ Below are a few examples of popular Kubernetes Operators and their functions and
 * Helps you deploy an application on demand (for example, [Argo CD operator (Helm](https://operatorhub.io/operator/argocd-operator-helm) is a declarative, GitOps continuous delivery tool for Kubernetes that helps with easy installation and configuration on demand)
 * Helps you install applications with the required configurations and number of application instances
 * Allows you to take and restore backups of the application state (for example, [Velero operator](https://github.com/vmware-tanzu/velero) manages disaster recovery, backup, and restoration of cluster components such as pv, pvc, deployments, etc., to aid in disaster recovery)
-* IHandles the upgrades of the application code plus the changes, such as database schema (for example, [Flux ](https://fluxcd.io/) is a continuous delivery solution for Kubernetes that allows automating updates to configuration when there is new code to deploy)
+* Handles the upgrades of the application code plus the changes, such as database schema (for example, [Flux ](https://fluxcd.io/) is a continuous delivery solution for Kubernetes that allows automating updates to configuration when there is new code to deploy)
 * Can manage a cluster of database servers (for example, [MariaDB operator](https://operatorhub.io/operator/mariadb-operator-app) creates MariaDB server and database easily by defining simple custom resource)
 * Can install a database cluster of a declared software version and number of members
 * Scale applications in or out
