--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -271,7 +271,7 @@ Below are a few examples of popular Kubernetes Operators and their functions and
 * Can manage a cluster of database servers (for example, [MariaDB operator](https://operatorhub.io/operator/mariadb-operator-app) creates MariaDB server and database easily by defining simple custom resource)
 * Can install a database cluster of a declared software version and number of members
 * Scale applications in or out
-* Continues to monitor its application as it runs (for example, [Prometheus Operator ](https://operatorhub.io/operator/prometheus) simplifies the deployment and configuration of Prometheus, Alertmanager, and related monitoring components)
+* Continues to monitor an application as it runs (for example, [Prometheus Operator ](https://operatorhub.io/operator/prometheus) simplifies the deployment and configuration of Prometheus, Alertmanager, and related monitoring components)
 * Initiate upgrades, automated backups, and failure recovery, simulating failure in all or part of your cluster to test its resilience
 * Allows you to publish a service to the applications that don’t support Kubernetes APIs to discover them
 
