--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -273,7 +273,7 @@ Below are a few examples of popular Kubernetes Operators and their functions and
 * Scale applications in or out
 * Continues to monitor an application as it runs (for example, [Prometheus Operator ](https://operatorhub.io/operator/prometheus) simplifies the deployment and configuration of Prometheus, Alertmanager, and related monitoring components)
 * Initiate upgrades, automated backups, and failure recovery, simulating failure in all or part of your cluster to test its resilience
-* Allows you to publish a service to the applications that don’t support Kubernetes APIs to discover them
+* Allows you to publish a service to applications that don’t support Kubernetes APIs to discover them
 
 ### How does an Operator work?
 
