Fixed the title

--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -23,7 +23,7 @@ The following links provide you with the available options to create a new Redis
  </div>
  <div class="col">
      <RedisCard
-        title="Kubernetes Operator: What It Is and Why You Should Really Care About It?"
+        title="Kubernetes Operator: What It Is and Why You Should Really Care About It"
         description="Learn about Kubernetes Operator and its benefits"
         page="/create/kubernetes/kubernetes-operator"
         />
