--- a/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
+++ b/docs/create/kubernetes/kubernetes-operator/index-kubernetes-operator.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-kubernetes-operator
-title: 'Kubernetes Operator: What is It and Why You Should Really Care About It?'
-sidebar_label: 'Kubernetes Operator: What is It and Why You Should Really Care About It?'
+title: 'Kubernetes Operator: What It Is and Why You Should Really Care About It'
+sidebar_label: 'Kubernetes Operator: What It Is and Why You Should Really Care About It'
 slug: /create/kubernetes/kubernetes-operator
 authors: [ajeet]
 ---
