--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -33,6 +33,7 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Thu 9 Dec, 10:30am UTC  |Have I Seen You Before? Introducing Bloom Filters        |<iframe src="https://www.youtube.com/embed/qgJRoWBmEoQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Fri 10 Dec, 6pm UTC     |You Can (Mostly) Count on Hyperloglog!                   |<iframe src="https://www.youtube.com/embed/pUpSnaqpcks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Sat 11 / Sun 12 Dec     |Second weekend hands-on exercise                         |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend2)|
+|Mon 13 Dec, 4pm UTC     |Sort it out! All about Sorted Sets                       |<iframe src="https://www.youtube.com/embed/iV-NcMpQa7c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 
 ## Meet the Team
 
