--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -34,6 +34,7 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Fri 10 Dec, 6pm UTC     |You Can (Mostly) Count on Hyperloglog!                   |<iframe src="https://www.youtube.com/embed/pUpSnaqpcks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Sat 11 / Sun 12 Dec     |Second weekend hands-on exercise                         |[Take the challenge on GitHub](https://github.com/redis-developer/devcember/tree/main/challenges/weekend2)|
 |Mon 13 Dec, 4pm UTC     |Sort it out! All about Sorted Sets                       |<iframe src="https://www.youtube.com/embed/iV-NcMpQa7c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Tue 14 Dec, 4:45pm UTC  |What's the Score? Top K with Redis Bloom!                |<iframe src="https://www.youtube.com/embed/u940lEA2Pv4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 
 ## Meet the Team
 
