--- a/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
@@ -7,7 +7,7 @@ authors: [ajeet]
 ---
 
 
-RedisAI is a Redis module for executing deep learning/machine learning models and managing their data. It provides tensors as a data type and deep-learning model execution on CPUs and GPUs. RedisAI turns Redis Enterprise into a full-fledged deep- learning runtime.The RedisAI module is seamlessly plugged into Redis. It is a scalable platform that addresses the unique requirements for both AI training and AI inference in one server. It provides a complete software platform that allows data scientists to easily deploy and manage AI solutions for enterprise applications. 
+RedisAI is a Redis module for executing deep learning/machine learning models and managing their data. It provides tensors as a data type and deep learning model execution on CPUs and GPUs. RedisAI turns Redis Enterprise into a full-fledged deep  learning runtime.The RedisAI module is seamlessly plugged into Redis. It is a scalable platform that addresses the unique requirements for both AI training and AI inference in one server. It provides a complete software platform that allows data scientists to easily deploy and manage AI solutions for enterprise applications. 
 
 The platform combines popular open source deep learning frameworks (PyTorch, ONNXRuntime, and TensorFlow), software libraries, and Redis modules like RedisGears, RedisTimeSeries, and more. With RedisAI, AI application developers no longer have to worry about tuning databases for performance. Requiring no added infrastructure, RedisAI lets you run your inference engine where the data lives, decreasing latency. 
 
