--- a/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
@@ -39,7 +39,7 @@ You will see that ONNX backend getting loaded as shown below in the results.
   1:M 09 Jun 2021 12:28:48.011 * Ready to accept connections
  ```
 
-You can verify if RedisAI module is loaded or not by running the below CLI
+You can verify if the RedisAI module is loaded or not by running the following command:
 
  ```bash
   127.0.0.1:6379> info modules
