--- a/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
@@ -111,7 +111,7 @@ NOTE: This requires redis-cli. If you don't have redis-cli, I've found the easie
 
 ### Step 8. Make Some Predictions
 
-[The AI.TENSORSET command](https://oss.redis.com/redisai/commands/#aitensorset) stores a tensor as the value of a key.
+[The `AI.TENSORSET` command](https://oss.redis.com/redisai/commands/#aitensorset) stores a tensor as the value of a key.
 
 Launch redis-cli:
 
