--- a/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
@@ -122,7 +122,7 @@ Launch redis-cli:
 ### Step 9. Set the input tensor 
 
 
-This will set the key 'iris' to the 2x4 RedisAI tensor( i.e. 2 sets of inputs of 4 values each)
+This will set the key 'iris' to the 2x4 RedisAI tensor (i.e. 2 sets of inputs of 4 values each).
 
 
 
