--- a/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisai/getting-started/index-gettingstarted.mdx
@@ -139,7 +139,7 @@ where,
 
 ### Step 10. Display TENSORGET in BLOB format
 
-The AI.TENSORGET command returns a tensor stored as key's value.
+The `AI.TENSORGET` command returns a tensor stored as key's value.
 The BLOB indicates that data is in binary format and is provided via the subsequent data argument
 
 
