--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -22,9 +22,8 @@ The RedisBloom module provides four data types:
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![My Image](tryfree.png)
+![My Image](images/try-free.png)
 
-![image](images/deployment.png)
 
 
 ### Step 2. Create Your subscription
@@ -34,43 +33,21 @@ Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis
 ![My Image](images/create_subscription.png)
 
 
-### Step 3. Select the right Subscription Plan
 
-Select "Fixed Plan" for low throughout application as for now.
-
-![My Image](images/select_subscription.png)
-
-### Step 4.  Select cloud vendor
- 
-For the cloud provider, select your preferred cloud (for demo purpose)
-
-
-![My Image](images/select_cloud.png)
-
-### Step 5. Click "Create Subscription"
-
-Finally, click on "Create Subscription" button.
-
-![My Image](images/final_subscription.png)
-
-You can now verify the subscription as shown below:
-
-![My Image](images/Verify_subscription.png)
-
-### Step 6. Create database
+### Step 3. Create database
 
 Click "Create Database". Enter database name and your preferred module.
 
 ![My Image](images/rediscloud_redisbloom.png)
 
-### Step 7. Connect to a database
+### Step 4. Connect to a database
 
 
 Follow [this](explore/redisinsight) link to know how to connect to a database
 
 
 
-### Step 8. Getting Started with RedisBloom
+### Step 5. Getting Started with RedisBloom
 
 In the next steps you will use some basic RedisBloom commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI.) To interact with RedisBloom, you use the BF.ADD and BF.EXISTS commands. 
 
