--- a/docs/howtos/redisearch/index-redisearch.mdx
+++ b/docs/howtos/redisearch/index-redisearch.mdx
@@ -11,60 +11,38 @@ RediSearch is a powerful text search and secondary indexing engine, built on top
 
 RediSearch also supports auto-completion with fuzzy prefix matching, and atomic real-time insertion of new documents to a search index.With the latest RediSearch 2.0 release, it’s now easier than ever to create a secondary index on top of your existing data. You can just add RediSearch to your existing Redis database, create an index, and start querying it, without having to migrate your data or use new commands for adding data to the index. This drastically lowers the learning curve for new RediSearch users and lets you create indexes on your existing Redis databases—without even having to restart them.
 
+
 ### Step 1. Create free cloud account
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![My Image](images/tryfree.png)
+![My Image](images/try-free.png)
 
-![image](images/deployment.png)
+
 
 ### Step 2. Create Your subscription
 
-Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription". 
+Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription".
 
 ![My Image](images/create_subscription.png)
 
 
-### Step 3. Select the right Subscription Plan
 
-Select "Fixed Plan" for low throughout application as for now.
-
-![My Image](images/select_subscription.png)
-
-### Step 4.  Select cloud vendor
- 
-For the cloud provider, select your preferred cloud (for demo purpose)
-
-
-
-![My Image](images/select_cloud.png)
-
-### Step 5. Click "Create Subscription"
-
-Finally, click on "Create Subscription" button.
-
-![My Image](images/final_subscription.png)
-
-You can now verify the subscription as shown below:
-
-![My Image](images/Verify_subscription.png)
-
-### Step 6. Create database
+### Step 3. Create database
 
 Click "Create Database". Enter database name and your preferred module.
 
 ![My Image](images/rediscloud_redisearch.png)
 
 
-### Step 7. Connect to a database
+### Step 4. Connect to a database
 
 
 Follow [this](explore/redisinsight) link to know how to connect to a database
 
 
 
-### Step 8. Getting Started with Redisearch
+### Step 5. Getting Started with Redisearch
 
 
 To begin, let’s create a basic dataset based on movies information, which we will use to show how to:
