--- a/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisgraph/getting-started/index-gettingstarted.mdx
@@ -15,28 +15,31 @@ RedisGraph is a Redis module that enables enterprises to process any kind of con
 
 Follow [this link to register](/create/cloud/rediscloud) and subscribe to Redis Enterprise Cloud
 
-![RedisGraph](tryfree.png)
-![RedisGraph](deployment.png)
+![RedisGraph](try-free.png)
 
-### Step 2. Create a database with RedisGraph Module
+### Step 2. Create a new subscription
+
+![RedisGraph](create_subscription.png)
+
+### Step 3. Create a database with RedisGraph Module
 
 ![RedisGraph](rediscloud_redisgraph.png)
 
 
-### Step 3. Connect to Redis database
+### Step 4. Connect to Redis database
 
 
 [Follow this link](/explore/redisinsight) to learn about RedisInsight - a free Redis GUI to connect to Redis database.
 
 
 
-### Step 4. Getting Started with RedisGraph
+### Step 5. Getting Started with RedisGraph
 
 In the following steps, we will use some basic RediGraph commands to insert data into a graph and then query the graph. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI.)
 
 ![RedisGraph](redisgraphflow.png)
 
-### Step 5: Insert data into a graph
+### Step 6: Insert data into a graph
 
 #### Insert actors
 
