--- a/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
+++ b/docs/howtos/redistimeseries/getting-started/index-redistimeseries.mdx
@@ -17,43 +17,13 @@ authors: [ajeet]
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![My Image](tryfree.png)
+![My Image](images/try-free.png)
 
-![image](images/deployment.png)
-
-
-### Step 2. Create Your subscription
-
-Next, you will have to create  Redis Enterprise Cloud subscription. In the Redis Enterprise Cloud menu, click "Create your Subscription". 
+### Step 2. Create a new subscription
 
 ![My Image](images/create_subscription.png)
 
-
-### Step 3. Select the right Subscription Plan
-
-Select "Fixed Plan" for low throughout application as for now.
-
-![My Image](images/select_subscription.png)
-
-### Step 4.  Select cloud vendor
- 
-For the cloud provider, select your preferred cloud (for demo purpose)
-
-
-
-![My Image](images/select_cloud.png)
-
-### Step 5. Click "Create Subscription"
-
-Finally, click on "Create Subscription" button.
-
-![My Image](images/final_subscription.png)
-
-You can now verify the subscription as shown below:
-
-![My Image](images/Verify_subscription.png)
-
-### Step 6. Create database
+### Step 3. Create database
 
 Click "Create Database". Enter database name and your preferred module.
 
@@ -61,14 +31,14 @@ Click "Create Database". Enter database name and your preferred module.
 
 
 
-### Step 7. Connect to a database
+### Step 4. Connect to a database
 
 
 Follow [this](explore/redisinsight) link to know how to connect to a database
 
 
 
-### Step 8. Getting Started with RedisTimeSeries
+### Step 5. Getting Started with RedisTimeSeries
 
 This section will walk you through using some basic RedisTimeseries commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight. (See part 2 of this tutorial to learn more about using the RedisInsight CLI.)
 Using a basic air-quality dataset, we will show you how to:
