--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -14,7 +14,8 @@ Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![image](images/deployment.png)
+![My Image](images/try-free.png)
+
 
 
 ### Step 2. Create Your subscription
