--- a/docs/create/heroku/herokujava/index-herokujava.mdx
+++ b/docs/create/heroku/herokujava/index-herokujava.mdx
@@ -19,13 +19,19 @@ Some of the notable benefits of Heroku include:
 - Helps your development, QA, and business stakeholders create a unified dashboard
 - Support for Modern Open Source Languages
 
-### Step 1. Create a Redis Enterprise Cloud Database
+#### Step 1. Create Redis Enterprise Cloud
 
-Create your free Redis Enterprise Cloud account. [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
+Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free)
 
-![heroku](rediscloud.png)
+![recloud](try-free.png)
 
-Save the database endpoint URL and password for future reference.
+[Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
+
+
+![heroku](launch_database.png)
+
+The database endpoint URL is unique for all and hence might be different in your case. Save it for future reference.
+
 
 
 ### Step 2. Create a Heroku account
