--- a/docs/create/rediscloud/index-recloud.mdx
+++ b/docs/create/rediscloud/index-recloud.mdx
@@ -12,9 +12,8 @@ Redis Enterprise Cloud is a fully managed cloud service by Redis. Built for mode
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
-![My Image](tryfree.png)
+![My Image](images/try-free.png)
 
-![image](images/deployment.png)
 
 
 ### Step 2. Create Your subscription
