--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -38,7 +38,7 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [Y
 |Wed 15 Dec, 10am UTC    |Seek and You May Find… Introducing RediSearch! (Part 1)  |<iframe src="https://www.youtube.com/embed/6uxpXvM-WSQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Wed 15 Dec, 10am UTC    |Seek and You May Find… Introducing RediSearch! (Part 2)  |<iframe src="https://www.youtube.com/embed/pOWpESEXzrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
 |Thu 16 Dec, 3:45pm UTC  |Introducing Redis OM for Node.js                         |<iframe src="https://www.youtube.com/embed/y0Sx_5Csld8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
-
+|Fri 17 Dec, 4pm UTC     |Object Mapping and More! Redis OM for .NET               |TODO youtube|
 ## Meet the Team
 
 Your regular presenters are:
